2008-04-09  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-mode-modified): Resolve setting constant by
	using format-time-string, but still using eval-when-compile.
	(php-mode): Turn on necessary c-mode features with c-add-language,
	like c-symbol-key.

2008-04-07  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-beginning-of-defun-regexp): Support function
	keywords like public, private per #1892662.

2008-04-06  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-show-arglist, php-font-lock-keywords-1)
	(php-font-lock-keywords-2): Replace "\\s-" for "[ \t]" in regular
	expressions to maintain consistency.
	(php-imenu-generic-expression): Delete comment explaining Imenu,
	since it's documented *correctly* in the manual.
	(php-mode): Remove definition php-mode-syntax-table
	and XEmacs bits that likely don't even work.

	* php-mode.el: Change incorrect year, "2007", in "Modified" field
	at top of file.
	(php-mode-version-number): Mark as "alpha" release.

2008-01-25  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* Makefile: File added.

2008-01-03  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el: Release candidate for 1.4.0.  Update copyright.
	Update version number.

2008-01-02  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-mode-modified): Fix this constant when library
	is compiled by wrapping in eval-when-compile.

2007-12-26  Aaron S. Hawley  <ashawley-@-sourceforge.net>

	* php-mode.el (php-mode): Delete use of php-conditional-key, as
	reported by Diego 'Flameeyes' Pettenò.

2007-11-24  Lennart Borgman  <lennart.borgman-@-gmail.com>

	* php-mode.el (php-mode): Delete trailing whitespace.  Fix
	capitalization of t value for font-lock-defaults.
	(php-constants): Delete trailing whitespace.

2007-11-23  Lennart Borgman  <lennart.borgman-@-gmail.com>

	* php-mode.el: Fix typo in changelog "versoin".  Put occurences of